--- a/scss/button.scss
+++ b/scss/button.scss
@@ -38,7 +38,7 @@
   }
 
   &-create-app {
-    padding: 17px 23px 17px 22px;
+    padding: 17px 35px;
     font-weight: 900;
     font-size: 16px;
     color: #fff;
