--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,6 +10,8 @@
 @import "screens/banner";
 @import "screens/about-us";
 @import "screens/steps";
-@import "screens/counter";
 @import "screens/benefits";
+@import "screens/referral";
+@import "screens/reviews";
+@import "screens/about-platform";
 
