--- a/scss/elements/header.scss
+++ b/scss/elements/header.scss
@@ -42,6 +42,7 @@
 
     .btn-create-app {
       margin: 0 10px;
+      padding: 6px 12px;
       font-weight: 500;
       text-transform: capitalize;
     }
