--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,6 +5,7 @@
 
 //elements
 @import "elements/header";
+@import "elements/footer";
 
 //screens
 @import "screens/banner";
@@ -14,4 +15,5 @@
 @import "screens/referral";
 @import "screens/reviews";
 @import "screens/about-platform";
+@import "screens/range-goods";
 
