--- a/scss/screens/range-goods.scss
+++ b/scss/screens/range-goods.scss
@@ -1,16 +1,15 @@
-.about-platform {
-  margin-top: 100px;
+.range-goods {
+  margin-top: 120px;
   text-align: center;
 
   .title {
     margin-bottom: 20px;
+    font-weight: 500;
   }
 
-  .map {
-    width: 100%;
-    height: 522px;
-    background: url("../images/map.png") center no-repeat;
-    background-size: 100%;
+  .subtitle {
+    margin-bottom: 80px;
+    font-weight: 300;
   }
 
   .calculate {
@@ -18,7 +17,7 @@
     padding: 24px 0 30px 0;
     box-shadow: 0 0 10px 0 rgba(230, 230, 230, 0.5);
 
-  &-item {
+    &-item {
       flex: 1;
 
       p {
