--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,5 +15,5 @@
 @import "screens/referral";
 @import "screens/reviews";
 @import "screens/about-platform";
-@import "screens/range-goods";
+@import "screens/portfolio";
 
