--- a/scss/button.scss
+++ b/scss/button.scss
@@ -24,7 +24,7 @@
   &-login {
     position: relative;
     padding: 0;
-    background-color: #fff;
+    background-color: #fafafa;
 
     .icon {
       display: inline-block;
@@ -43,5 +43,6 @@
     font-size: 16px;
     color: #fff;
     text-transform: uppercase;
+    text-shadow: 0 1px;
   }
 }
