--- a/scss/elements/header.scss
+++ b/scss/elements/header.scss
@@ -2,8 +2,8 @@
   //position: fixed;
   //width: 100%;
   padding: 20px 0;
-  background-color: #fff;
   //z-index: 1;
+  box-shadow: 0 1px 0 0 rgba(228, 228, 228, 0.5);
 
   .btn {
     font-size: 14px;
@@ -39,6 +39,11 @@
     justify-content: space-between;
     align-items: stretch;
     height: 100%;
+
+    .btn-language,
+    .btn-create-app {
+      font-size: 12px;
+    }
 
     .btn-create-app {
       margin: 0 10px;
