--- a/scss/screens/banner.scss
+++ b/scss/screens/banner.scss
@@ -1,6 +1,5 @@
-.banner {
-  height: 100vh;
-  padding-top: #{$header-height};
+section.banner {
+  min-height: 630px;
   overflow: hidden;
 
   .title {
@@ -12,6 +11,7 @@
 
   .subtitle {
     margin: 24px 0 33px 0;
+    font-weight: 300;
     line-height: 32px;
     font-size: 24px;
   }
@@ -20,12 +20,13 @@
     padding: 17px 23px 17px 22px;
   }
 
-  &-bg {
+  .banner-bg {
     position: absolute;
+    top: 35px;
     right: -3vw;
     width: 100%;
     height: 745px;
-    background: url(../images/banner-bg.png) center right no-repeat;
+    background: url(../images/banner-bg.png) top right no-repeat;
     background-size: 100%;
   }
 }
