--- a/scss/screens/steps.scss
+++ b/scss/screens/steps.scss
@@ -4,8 +4,12 @@
   font-size: 18px;
 
   &-item {
-    padding: 60px 33px 0;
-    margin-bottom: 60px;
+    min-height: 490px;
+    padding: 0 33px;
+    margin: 60px 0;
+    border-radius: 6px;
+    background-color: #ffffff;
+    box-shadow: 0 0 10px 0 rgba(230, 230, 230, 0.5);
 
     .icon {
       width: 126px;
