--- a/scss/screens/about-platform.scss
+++ b/scss/screens/about-platform.scss
@@ -16,6 +16,8 @@
   .calculate {
     display: flex;
     padding: 24px 0 30px 0;
+    border-radius: 8px;
+    background: #fff;
     box-shadow: 0 0 10px 0 rgba(230, 230, 230, 0.5);
 
   &-item {
