--- a/scss/style.css
+++ b/scss/style.css
@@ -156,7 +156,7 @@ a:hover {
     color: #35344c; }
 
 section.banner {
-  min-height: 630px;
+  min-height: 100vh;
   overflow: hidden; }
   section.banner .title {
     margin-top: 162px;
@@ -180,7 +180,40 @@ section.banner {
     background-size: 100%; }
 
 .about-us {
+  display: flex;
+  flex-direction: column;
   font-size: 18px; }
+  .about-us .title {
+    max-width: 930px;
+    margin: 0 auto 120px auto;
+    font-size: 31px; }
+  .about-us .phone {
+    position: relative;
+    width: 640px;
+    min-height: 383px;
+    margin: auto;
+    background: url("../images/about-us/phone.svg") center no-repeat; }
+  .about-us .message {
+    position: absolute;
+    left: 160px;
+    top: -45px;
+    width: 149px;
+    height: 141px;
+    background: url("../images/about-us/message.svg") center no-repeat; }
+  .about-us .paint-can {
+    position: absolute;
+    bottom: 32px;
+    left: 368px;
+    width: 150px;
+    height: 130px;
+    background: url("../images/about-us/panit-can.svg") top right no-repeat, url("../images/about-us/brush.svg") bottom left no-repeat; }
+  .about-us .money {
+    position: absolute;
+    top: 86px;
+    left: 46px;
+    width: 60px;
+    height: 100px;
+    background: url(../images/about-us/money.svg) center no-repeat; }
 
 .steps {
   padding-top: 78px;
@@ -439,6 +472,8 @@ section.banner {
   .about-platform .calculate {
     display: flex;
     padding: 24px 0 30px 0;
+    border-radius: 8px;
+    background: #fff;
     box-shadow: 0 0 10px 0 rgba(230, 230, 230, 0.5); }
     .about-platform .calculate-item {
       flex: 1; }
@@ -459,14 +494,14 @@ section.banner {
     margin-bottom: 20px;
     font-weight: 500; }
   .portfolio .subtitle {
+    margin-bottom: 80px;
     font-weight: 300; }
   .portfolio .slider {
     position: relative;
     margin-bottom: 50px;
     overflow: hidden; }
     .portfolio .slider .slide {
-      display: flex;
-      width: 1110px; }
+      display: flex; }
       .portfolio .slider .slide-container {
         position: relative;
         left: -1110px;
@@ -491,5 +526,51 @@ section.banner {
           margin-top: 30px;
           font-weight: 700;
           font-size: 18px; }
+  .portfolio .button-container {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px; }
+    .portfolio .button-container a {
+      position: relative;
+      width: 40px;
+      height: 40px;
+      border-radius: 8px;
+      background-color: #fff;
+      box-shadow: 0 0 10px 0 rgba(230, 230, 230, 0.5); }
+      .portfolio .button-container a:before {
+        content: '';
+        position: absolute;
+        display: block;
+        top: 16px;
+        width: 10px;
+        height: 10px;
+        border: 1px solid #000;
+        transform: rotate(45deg); }
+    .portfolio .button-container .button-prev:before {
+      left: 17px;
+      border-top-color: transparent;
+      border-right-color: transparent; }
+    .portfolio .button-container .button-next:before {
+      right: 17px;
+      border-bottom-color: transparent;
+      border-left-color: transparent; }
+  .portfolio .indicators {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 140px;
+    margin: 60px auto 50px auto; }
+    .portfolio .indicators .indicator {
+      width: 8px;
+      height: 8px;
+      margin: 0 10px;
+      border-radius: 50%;
+      background-color: #d8d8d8;
+      cursor: pointer; }
+      .portfolio .indicators .indicator.active {
+        width: 14px;
+        height: 14px;
+        background-color: #99cc33; }
 
 /*# sourceMappingURL=style.css.map */
