--- a/scss/style.css
+++ b/scss/style.css
@@ -182,11 +182,30 @@ section.banner {
 .about-us {
   display: flex;
   flex-direction: column;
-  font-size: 18px; }
+  font-size: 18px;
+  margin-bottom: 200px; }
   .about-us .title {
     max-width: 930px;
     margin: 0 auto 120px auto;
     font-size: 31px; }
+  .about-us .text-container {
+    position: relative; }
+  .about-us p {
+    position: absolute;
+    max-width: 270px; }
+    .about-us p.top-left {
+      top: -100px;
+      left: 0; }
+    .about-us p.top-right {
+      top: -100px;
+      left: 910px; }
+    .about-us p.bottom-left {
+      bottom: -530px;
+      left: 0; }
+    .about-us p.bottom-right {
+      max-width: 310px;
+      bottom: -530px;
+      left: 830px; }
   .about-us .phone {
     position: relative;
     width: 640px;
@@ -197,7 +216,7 @@ section.banner {
     position: absolute;
     left: 160px;
     top: -45px;
-    width: 149px;
+    width: 150px;
     height: 141px;
     background: url("../images/about-us/message.svg") center no-repeat; }
   .about-us .paint-can {
@@ -213,7 +232,28 @@ section.banner {
     left: 46px;
     width: 60px;
     height: 100px;
-    background: url(../images/about-us/money.svg) center no-repeat; }
+    background: url("../images/about-us/money.svg") center no-repeat; }
+  .about-us .gift-box {
+    position: absolute;
+    top: 162px;
+    right: -16px;
+    width: 83px;
+    height: 93px;
+    background: url("../images/about-us/gift-box.svg") center no-repeat; }
+  .about-us .clock {
+    position: absolute;
+    top: 350px;
+    left: 30px;
+    width: 71px;
+    height: 51px;
+    background: url("../images/about-us/clock.svg") center no-repeat; }
+  .about-us .book {
+    position: absolute;
+    bottom: -47px;
+    left: 250px;
+    width: 129px;
+    height: 78px;
+    background: url("../images/about-us/book.svg") center no-repeat; }
 
 .steps {
   padding-top: 78px;
