--- a/scss/screens/about-platform.scss
+++ b/scss/screens/about-platform.scss
@@ -9,8 +9,8 @@
   .map {
     width: 100%;
     height: 522px;
-    background: url("../images/map.png") center no-repeat;
-    background-size: 100%;
+    //background: url("../images/map.png") center no-repeat;
+    //background-size: 100%;
   }
 
   .calculate {
