--- a/scss/style.css
+++ b/scss/style.css
@@ -208,10 +208,11 @@ section.banner {
       left: 830px; }
   .about-us .phone {
     position: relative;
-    width: 640px;
-    min-height: 383px;
+    width: 636px;
+    min-height: 401px;
     margin: auto;
-    background: url("../images/about-us/phone.svg") center no-repeat; }
+    background: url("../images/about-us/phone.svg") center no-repeat;
+    background-size: 90%; }
   .about-us .message {
     position: absolute;
     left: 160px;
@@ -290,6 +291,9 @@ section.banner {
           height: 1px;
           background-image: linear-gradient(to left, #ffffff, #000000 50%, #ffffff);
           opacity: 0.1; }
+  .steps #clock {
+    max-width: 475px;
+    margin: 0 auto; }
   .steps .counter {
     text-align: center;
     font-size: 50px;
@@ -506,9 +510,7 @@ section.banner {
     margin-bottom: 20px; }
   .about-platform .map {
     width: 100%;
-    height: 522px;
-    background: url("../images/map.png") center no-repeat;
-    background-size: 100%; }
+    height: 522px; }
   .about-platform .calculate {
     display: flex;
     padding: 24px 0 30px 0;
