--- a/scss/screens/banner.scss
+++ b/scss/screens/banner.scss
@@ -5,6 +5,7 @@ section.banner {
   .title {
     margin-top: 162px;
     text-align: left;
+    font-weight: 500;
     line-height: 50px;
     font-size: 40px;
   }
