--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,6 +11,7 @@
 @import "screens/banner";
 @import "screens/about-us";
 @import "screens/steps";
+@import "screens/counter";
 @import "screens/benefits";
 @import "screens/referral";
 @import "screens/reviews";
