--- a/scss/screens/about-platform.scss
+++ b/scss/screens/about-platform.scss
@@ -15,13 +15,20 @@
 
   .calculate {
     display: flex;
+    justify-content: center;
     padding: 24px 0 30px 0;
     border-radius: 8px;
     background: #fff;
     box-shadow: 0 0 10px 0 rgba(230, 230, 230, 0.5);
 
-  &-item {
-      flex: 1;
+
+    &-item {
+      padding: 0 50px;
+
+      &:nth-child(2) {
+        border-right: 1px solid #e5e5e5;
+        border-left: 1px solid #e5e5e5;
+      }
 
       p {
         margin: 0;
