--- a/scss/screens/counter.scss
+++ b/scss/screens/counter.scss
@@ -1,26 +1,19 @@
-.counter-bloc {
+.counter {
+  padding: 80px 0;
   text-align: center;
-  font-size: 18px;
+  font-size: 50px;
+  background-color: #fff;
 
-  .steps-item {
-    padding-top: 0;
-  }
-
-  .btn-create-app {
-    margin-top: 50px;
-    margin-bottom: 135px;
-  }
-
-  .title {
+  &-title {
+    margin-bottom: 50px;
     font-weight: 500;
     line-height: 1.45;
     font-size: 22px;
     color: #000;
   }
 
-  .counter {
-    text-align: center;
-    font-size: 50px;
-    text-transform: uppercase;
+  #clock {
+    max-width: 475px;
+    margin: 0 auto;
   }
 }
